--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MangaK</title>
+        <link rel="stylesheet" href="styles/style.css"/>
     </head>
 
     <body>
@@ -93,7 +94,7 @@
             <section>
                 <h3>Contactanos</h3>
                     <p>
-                        Informacio
+                        Informacion
                     </p>
                 
             </section>
