--- a/Lenguaje_de_marcas/architeXture/index.html
+++ b/Lenguaje_de_marcas/architeXture/index.html
@@ -32,35 +32,37 @@
     
     <aside>
         <!-- Podemos dividir cada h3 en sections tambien-->
-    <section>
-        <h3>Things To Do</h3> 
-            <ul>
-                <li><a href= ""> Play Games and Network</a> </li>
-                <li><a href= ""> Chat with friends</a>       </li>
-                <li><a href = "">Swap exciting Stories</a>   </li>
-                <li><a href = "">Sell tons of Your Stuff</a> </li>
-                <li><a href = "">Buy Stuff You Don't Need</a></li>
-                <li><a href = "">Trade Stuff With Others</a> </li>
-            </ul>
-    </section>
-
-    <section> 
-        <h3>Sponsors</h3>
-        <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
-        <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
-        <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
-        <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
-    </section>
-    <section>
-        <h3>Connect With Us</h3>
+        <section>
+            <h3>Things To Do</h3> 
                 <ul>
-                    <li><a href = "">Twitter</a></li>
-                    <li><a href = "">Facebook</a></li>
+                    <li><a href= ""> Play Games and Network</a> </li>
+                    <li><a href= ""> Chat with friends</a>       </li>
+                    <li><a href = "">Swap exciting Stories</a>   </li>
+                    <li><a href = "">Sell tons of Your Stuff</a> </li>
+                    <li><a href = "">Buy Stuff You Don't Need</a></li>
+                    <li><a href = "">Trade Stuff With Others</a> </li>
                 </ul>
-    </aside>
-    </section>
+        </section>
 
-    <section>
+        <section> 
+            <h3>Sponsors</h3>
+            <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
+            <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
+            <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
+            <img src="images/advertiseHere.jpg" alt = AdvertiseHere>
+        </section>
+        <section>
+            <h3>Connect With Us</h3>
+                    <ul>
+                        <li><a href = "">Twitter</a></li>
+                        <li><a href = "">Facebook</a></li>
+                    </ul>
+        </section>
+    </aside>
+
+    
+
+    <section id="texto">
         <article>
             <h2> First Article tittle </h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. 
@@ -77,6 +79,15 @@
             Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. 
             Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
             Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.
+         </p>
+
+         <p>Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa.
+            Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+         </p>
+
+         <p>Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+            himenaeos.
+
          </p>
      </article>
     </section>
