--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -82,7 +82,7 @@
 
         <main>
             <article>
-                <h4>manga1</h4>
+                <h4>One Piece</h4>
                 <img src="images/one-piece.jpg" alt="">
             </article>
             <article>
