--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MangaK</title>
         <link rel="stylesheet" href="styles/style.css"/>
+        <link rel="icon" href="images/topIcon.png" type="png" sizes="">
     </head>
 
     <body>
@@ -81,29 +82,78 @@
         </aside>
 
         <main>
-            <article>
+            <!-- 
+                id="PORTADAS"
+
+
+
+                id="kodomo"     -niños pequeños
+                id="shonen"     -chicos adolescentes
+                id="shojo"      -chicas adolescentes
+                id="seinen"     -hombres jobenes y adultos
+                id="josei"      -mujeres jovenes y adultos
+                id=""
+                id=""
+                id=""
+                id=""
+                id=""
+                id=""
+                id=""
+                id=""
+                id=""
+
+             -->
+            <article id="seinen">
                 <h4>One Piece</h4>
-                <img src="images/one-piece.jpg" alt="">
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
             </article>
-            <article>
+            <article id="seinen">
                 <h4>manga2</h4>
-                <img src="images/one-piece.jpg" alt="">
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
             </article>
-            <article>
+            <article id="seinen">
                 <h4>manga3</h4>
-                <img src="images/one-piece.jpg" alt="">
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
             </article>
-            <article>
+            <article id="seinen">
                 <h4>manga4</h4>
-                <img src="images/one-piece.jpg" alt="">
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
             </article>
-            <article>
+            <article id="seinen">
                 <h4>manga5</h4>
-                <img src="images/one-piece.jpg" alt="">
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
             </article>
-            <article>
+            <article id="seinen">
                 <h4>manga6</h4>
-                <img src="images/one-piece.jpg" alt="">
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+            </article>
+            <article id="seinen">
+                <h4>manga6</h4>
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+            </article>
+            <article id="seinen">
+                <h4>manga6</h4>
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+            </article>
+            <article id="seinen">
+                <h4>manga6</h4>
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+            </article>
+            <article id="seinen">
+                <h4>manga6</h4>
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+            </article>
+            <article id="seinen">
+                <h4>manga6</h4>
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+            </article>
+            <article id="seinen">
+                <h4>manga6</h4>
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+            </article>
+            <article id="seinen">
+                <h4>manga6</h4>
+                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
             </article>
 
         </main>
