--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MangaK</title>
         <link rel="stylesheet" href="styles/style.css"/>
-        <link rel="icon" href="images/topIcon.png" type="png" sizes="">
+        <link rel="icon" href="images/icon.ico" type="ico">
     </head>
 
     <body>
@@ -94,67 +94,108 @@
                 id="josei"      -mujeres jovenes y adultos
                 id=""
                 id=""
-                id=""
-                id=""
-                id=""
-                id=""
-                id=""
-                id=""
-                id=""
+            
+                <article id="seinen">
+                    <h4>nombre</h4>
+                    <a href="">
+                        <img id="PORTADAS" src="images/" alt="">
+                    </a>
+                </article>
 
              -->
             <article id="seinen">
                 <h4>One Piece</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <a href="">
+                    <img id="PORTADAS" src="images/one-piece.jpg" alt="" href>
+                </a>
             </article>
+            
             <article id="seinen">
-                <h4>manga2</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Berserk</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/berserk.jpg" alt="">
+                </a>
             </article>
+
+            <article id="josei">
+                <h4>Ayanashi</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/ayanashi.jpg" alt="">
+                </a>
+            </article>
+
             <article id="seinen">
-                <h4>manga3</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Black Butler</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/black-butler.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga4</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Iron Ladies</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/iron-ladies.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga5</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Tsuyokute New Saga</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/tsuyokute-new-saga.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Spy x Family </h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/spy-x-family.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Chainsaw Man</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/chainsaw-man.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Black Clover</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/black-clover.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Crunch</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/crunch.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Fire Punch</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/fire-punch.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Houseki no Kuni</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/houseki-no-kuni.jpg" alt="">
+                </a>
             </article>
+
             <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
+                <h4>Bleach</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/bleach.jpg" alt="">
+                </a>
             </article>
-            <article id="seinen">
-                <h4>manga6</h4>
-                <img id="PORTADAS" src="images/one-piece.jpg" alt="">
-            </article>
+
+
+
 
         </main>
 
