--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -105,7 +105,7 @@
              -->
             <article id="seinen">
                 <h4>One Piece</h4>
-                <a href="">
+                <a href="mangas/one-piece/front.html">
                     <img id="PORTADAS" src="images/one-piece.jpg" alt="" href>
                 </a>
             </article>
