--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/front.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="../../images/icon.ico" type="ico">
+    <title>One Piece</title>
 </head>
 <body>
-    
+    <header>
+        <h3>ONE PIECE</h3>
+    </header>
+
+    <nav>
+
+    </nav>
+
+
+
+    <aside>
+
+    </aside>
+
+
+
+
+    <main>
+
+    </main>
+
+
+
+
+    <footer>
+
+    </footer>
+
+
+
 </body>
 </html>
