--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -30,40 +30,31 @@
                     Top Semanal
                 </h3>
 
+
+
+
+
+
                 <li>
-                    <a href = "">Top 1</a>
+                    <p>Top 1</p>
+                    <a href = "">
+                        <img id="top" src="images/berserk.jpg" alt="">
+                    </a>
                 </li>
+
                 <li>
-                    <a href = "">Top 2</a>
+                    <p>Top 2</p>
+                    <a href = "">
+                        <img id="top" src="images/berserk.jpg" alt="">
+                    </a>
                 </li>
-                <li>
-                    <a href = "">Top 3</a>
-                </li>
-                <li>
-                    <a href = "">Top 4</a>
-                </li>
-                <li>
-                    <a href = "">Top 5</a>
-                </li>
-                <li>
-                    <a href = "">Top 6</a>
-                </li>
-                <li>
-                    <a href = "">Top 7</a>
-                </li>
-                <li>
-                    <a href = "">Top 8</a>
-                </li>
-                <li>
-                    <a href = "">Top 9</a>
-                </li>
-                <li>
-                    <a href = "">Top 10</a>
-                    <!-- <img src="images/one-piece.jpg" alt=""> -->
-                </li>
+
+
+
+
             </ul>
 
-            <ul>
+            <!-- <ul>
                 <h3>
                     Top Mensual
                 </h3>
@@ -78,7 +69,7 @@
                 <li><a href = "">Top 8</a></li>
                 <li><a href = "">Top 9</a></li>
                 <li><a href = "">Top 10</a></li>
-            </ul>
+            </ul> -->
         </aside>
 
         <main>
