--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -26,9 +26,7 @@
 
         <aside>
             <ul>
-                <h3>
-                    Top Semanal
-                </h3>
+                <h3>Top Semanal</h3>
 
                 <img id="corona" src="images/topcrownAmarillo.png" alt="">
 
@@ -105,24 +103,89 @@
 
 
             </ul>
+        <ul>
+            <h3>Top Mensual</h3>
 
-            <!-- <ul>
-                <h3>
-                    Top Mensual
-                </h3>
+            <img id="corona" src="images/topcrownAmarillo.png" alt="">
 
-                <li><a href = "">Top 1</a></li>
-                <li><a href = "">Top 2</a></li>
-                <li><a href = "">Top 3</a></li>
-                <li><a href = "">Top 4</a></li>
-                <li><a href = "">Top 5</a></li>
-                <li><a href = "">Top 6</a></li>
-                <li><a href = "">Top 7</a></li>
-                <li><a href = "">Top 8</a></li>
-                <li><a href = "">Top 9</a></li>
-                <li><a href = "">Top 10</a></li>
-            </ul> -->
+
+            <li>
+                <p>Top 1</p>
+                <a href = "">
+                    <img id="top1" src="images/berserk.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 2</p>
+                <a href = "">
+                    <img id="top2" src="images/fire-punch.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 3</p>
+                <a href = "">
+                    <img id="top3" src="images/solo-leveling.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 4</p>
+                <a href = "">
+                    <img id="top" src="images/spy-x-family.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 5</p>
+                <a href = "">
+                    <img id="top" src="images/naruto.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 6</p>
+                <a href = "">
+                    <img id="top" src="images/komi-san-wa-komyushou-desu.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 7</p>
+                <a href = "">
+                    <img id="top" src="images/iron-ladies.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 8</p>
+                <a href = "">
+                    <img id="top" src="images/fullmetal-alchemist.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 9</p>
+                <a href = "">
+                    <img id="top" src="images/gokurakugai.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <p>Top 10</p>
+                <a href = "">
+                    <img id="top" src="images/freaks.jpg" alt="">
+                </a>
+            </li>
+
+
+        </ul>
+
         </aside>
+
+
+
 
         <main>
             <!-- 
