--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -25,6 +25,7 @@
         </nav>
 
         <aside>
+            <!-- TOP SEMANAL -->
             <ul>
                 <h3>Top Semanal</h3>
 
@@ -103,84 +104,88 @@
 
 
             </ul>
-        <ul>
-            <h3>Top Mensual</h3>
-
-            <img id="corona" src="images/topcrownAmarillo.png" alt="">
 
 
-            <li>
-                <p>Top 1</p>
-                <a href = "">
-                    <img id="top1" src="images/berserk.jpg" alt="">
-                </a>
-            </li>
 
-            <li>
-                <p>Top 2</p>
-                <a href = "">
-                    <img id="top2" src="images/fire-punch.jpg" alt="">
-                </a>
-            </li>
+            <!-- TOP MENSUAL -->
+            <ul>
+                <h3>Top Mensual</h3>
 
-            <li>
-                <p>Top 3</p>
-                <a href = "">
-                    <img id="top3" src="images/solo-leveling.jpg" alt="">
-                </a>
-            </li>
-
-            <li>
-                <p>Top 4</p>
-                <a href = "">
-                    <img id="top" src="images/spy-x-family.jpg" alt="">
-                </a>
-            </li>
-
-            <li>
-                <p>Top 5</p>
-                <a href = "">
-                    <img id="top" src="images/naruto.jpg" alt="">
-                </a>
-            </li>
-
-            <li>
-                <p>Top 6</p>
-                <a href = "">
-                    <img id="top" src="images/komi-san-wa-komyushou-desu.jpg" alt="">
-                </a>
-            </li>
-
-            <li>
-                <p>Top 7</p>
-                <a href = "">
-                    <img id="top" src="images/iron-ladies.jpg" alt="">
-                </a>
-            </li>
-
-            <li>
-                <p>Top 8</p>
-                <a href = "">
-                    <img id="top" src="images/fullmetal-alchemist.jpg" alt="">
-                </a>
-            </li>
-
-            <li>
-                <p>Top 9</p>
-                <a href = "">
-                    <img id="top" src="images/gokurakugai.jpg" alt="">
-                </a>
-            </li>
-
-            <li>
-                <p>Top 10</p>
-                <a href = "">
-                    <img id="top" src="images/freaks.jpg" alt="">
-                </a>
-            </li>
+                <img id="corona" src="images/topcrownAmarillo.png" alt="">
 
 
-        </ul>
+                <li>
+                    <p>Top 1</p>
+                    <a href = "">
+                        <img id="top1" src="images/berserk.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 2</p>
+                    <a href = "">
+                        <img id="top2" src="images/fire-punch.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 3</p>
+                    <a href = "">
+                        <img id="top3" src="images/solo-leveling.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 4</p>
+                    <a href = "">
+                        <img id="top" src="images/spy-x-family.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 5</p>
+                    <a href = "">
+                        <img id="top" src="images/naruto.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 6</p>
+                    <a href = "">
+                        <img id="top" src="images/komi-san-wa-komyushou-desu.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 7</p>
+                    <a href = "">
+                        <img id="top" src="images/iron-ladies.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 8</p>
+                    <a href = "">
+                        <img id="top" src="images/fullmetal-alchemist.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 9</p>
+                    <a href = "">
+                        <img id="top" src="images/gokurakugai.jpg" alt="">
+                    </a>
+                </li>
+
+                <li>
+                    <p>Top 10</p>
+                    <a href = "">
+                        <img id="top" src="images/freaks.jpg" alt="">
+                    </a>
+                </li>
+
+
+            </ul>
 
         </aside>
 
@@ -299,8 +304,86 @@
                     <img id="PORTADAS" src="images/bleach.jpg" alt="">
                 </a>
             </article>
+            
+            <article id="seinen">
+                <h4>Gokurakugai</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/gokurakugai.jpg" alt="">
+                </a>
+            </article>
 
+            <article id="seinen">
+                <h4>Full Metal Alchemist</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/fullmetal-alchemist.jpg" alt="">
+                </a>
+            </article>
 
+            <article id="seinen">
+                <h4>Houseki No Kuni</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/houseki-no-kuni.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Kill The Hero</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/kill-the-hero.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Iron Ladies: Saint Tooka</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/iron-ladies:-saint-tooka.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Boku No Hero Academia</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/boku-no-hero-academia.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Pale Throne</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/pale-throne.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Crimson Grimoire</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/crimson-grimoire.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Dr. Stone</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/dr-stone.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Gokutei Higuma</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/gokutei-higuma.jpg" alt="">
+                </a>
+            </article>
+
+            <article id="seinen">
+                <h4>Isekai Tensei Soudouki</h4>
+                <a href="">
+                    <img id="PORTADAS" src="images/isekai-tensei-soudouki.jpg" alt="">
+                </a>
+            </article>
+
+            
+            <!-- [1][2][3]... -->
 
 
         </main>
