--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -12,6 +12,7 @@
     <body>
         <header>
             <h1>MANGAK</h1>
+            <img src="images/banner3.png" alt="">
         </header>
 
         <nav>
