--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -7,12 +7,14 @@
         <title>MangaK</title>
         <link rel="stylesheet" href="styles/style.css"/>
         <link rel="icon" href="images/icon.ico" type="ico">
+        <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
     </head>
 
     <body>
         <header>
-            <h1>MANGAK</h1>
-            <img src="images/banner3.png" alt="">
+            <h1 class="neonText">MANGAK</h1>
+            <p>"Just relax and read "</p>
+            <!-- <img src="images/banner3.png" alt=""> -->
         </header>
 
         <nav>
@@ -23,6 +25,7 @@
                 <li><a href = "">Noticias </a></li>
                 <li><a href = "">Mi Biblioteca </a></li>
             </ul>
+
         </nav>
 
         <aside>
@@ -34,70 +37,70 @@
 
 
                 <li>
-                    <p>Top 1</p>
+                    <a id="textoTop"   href="">Top 1</a>
                     <a href = "">
                         <img id="top1" src="images/berserk.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 2</p>
+                    <a id="textoTop"   href="">Top 2</a>
                     <a href = "">
                         <img id="top2" src="images/fire-punch.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 3</p>
+                    <a id="textoTop"   href="">Top 3</a>
                     <a href = "">
                         <img id="top3" src="images/solo-leveling.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 4</p>
+                    <a id="textoTop"   href="">Top 4</a>
                     <a href = "">
                         <img id="top" src="images/spy-x-family.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 5</p>
+                    <a id="textoTop"   href="">Top 5</a>
                     <a href = "">
                         <img id="top" src="images/naruto.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 6</p>
+                    <a id="textoTop"   href="">Top 6</a>
                     <a href = "">
                         <img id="top" src="images/komi-san-wa-komyushou-desu.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 7</p>
+                    <a id="textoTop"   href="">Top 7</a>
                     <a href = "">
                         <img id="top" src="images/iron-ladies.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 8</p>
+                    <a id="textoTop"   href="">Top 8</a>
                     <a href = "">
                         <img id="top" src="images/fullmetal-alchemist.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 9</p>
+                    <a id="textoTop"   href="">Top 9</a>
                     <a href = "">
                         <img id="top" src="images/gokurakugai.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 10</p>
+                    <a id="textoTop"   href="">Top 10</a>
                     <a href = "">
                         <img id="top" src="images/freaks.jpg" alt="">
                     </a>
@@ -116,70 +119,70 @@
 
 
                 <li>
-                    <p>Top 1</p>
+                    <a id="textoTop"   href="">Top 1</a>
                     <a href = "">
                         <img id="top1" src="images/berserk.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 2</p>
+                    <a id="textoTop"   href="">Top 2</a>
                     <a href = "">
                         <img id="top2" src="images/fire-punch.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 3</p>
+                    <a id="textoTop"   href="">Top 3</a>
                     <a href = "">
                         <img id="top3" src="images/solo-leveling.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 4</p>
+                    <a id="textoTop"   href="">Top 4</a>
                     <a href = "">
                         <img id="top" src="images/spy-x-family.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 5</p>
+                    <a id="textoTop"   href="">Top 5</a>
                     <a href = "">
                         <img id="top" src="images/naruto.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 6</p>
+                    <a id="textoTop"   href="">Top 6</a>
                     <a href = "">
                         <img id="top" src="images/komi-san-wa-komyushou-desu.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 7</p>
+                    <a id="textoTop"   href="">Top 7</a>
                     <a href = "">
                         <img id="top" src="images/iron-ladies.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 8</p>
+                    <a id="textoTop"   href="">Top 8</a>
                     <a href = "">
                         <img id="top" src="images/fullmetal-alchemist.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 9</p>
+                    <a id="textoTop"   href="">Top 9</a>
                     <a href = "">
                         <img id="top" src="images/gokurakugai.jpg" alt="">
                     </a>
                 </li>
 
                 <li>
-                    <p>Top 10</p>
+                    <a id="textoTop"   href="">Top 10</a>
                     <a href = "">
                         <img id="top" src="images/freaks.jpg" alt="">
                     </a>
@@ -222,7 +225,7 @@
                 </a>
             </article>
             
-            <article id="seinen">
+            <article id="shojo">
                 <h4>Berserk</h4>
                 <a href="">
                     <img id="PORTADAS" src="images/berserk.jpg" alt="">
@@ -236,7 +239,7 @@
                 </a>
             </article>
 
-            <article id="seinen">
+            <article id="shounen">
                 <h4>Black Butler</h4>
                 <a href="">
                     <img id="PORTADAS" src="images/black-butler.jpg" alt="">
@@ -257,7 +260,7 @@
                 </a>
             </article>
 
-            <article id="seinen">
+            <article id="kodomo">
                 <h4>Spy x Family </h4>
                 <a href="">
                     <img id="PORTADAS" src="images/spy-x-family.jpg" alt="">
