--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -14,6 +14,7 @@
         <header>
             <h1 class="neonText">MANGAK</h1>
             <p>"Just relax and read "</p>
+            <img src="images/icon.ico" alt="">
             <!-- <img src="images/banner3.png" alt=""> -->
         </header>
 
