--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -14,9 +14,12 @@
         <header>
             <h1 class="neonText">MANGAK</h1>
             <p>"Just relax and read "</p>
-            <!-- <img src="images/icon.ico" alt=""> -->
-            <!-- <img src="images/banner3.png" alt=""> -->
+            <img src="images/banners/banner3.png" alt="">
         </header>
+
+        <a id="arriba" href="">
+            <img  src="images/iconos/icon.ico" alt="">
+        </a>
 
         <nav>
             <ul>
@@ -435,7 +438,7 @@
                 MangaK no realiza las traducciones aquí realizadas y solo es un repositorio con visor propio para que se puedan leer de forma comoda las obras.
             </p>
         </article>
-        
+
         <article id="copyright">© 2022 MangaK</article>
 
     </footer>
