--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -14,11 +14,12 @@
         <header>
             <h1 class="neonText">MANGAK</h1>
             <p>"Just relax and read "</p>
-            <img src="images/banners/banner3.png" alt="">
         </header>
 
+
+        <!-- Icono para ir hacia arriba -->
         <a id="arriba" href="">
-            <img  src="images/iconos/icon.ico" alt="">
+            <img  src="images/iconos/flechaArriba.png" alt="">
         </a>
 
         <nav>
@@ -421,15 +422,12 @@
             </ul>
         </article>
         
-        <article id="sigenos">
-            <h4>Sigenos</h4>
+        <article id="siguenos">
+            <h4>Siguenos</h4>
             <a href=""><img src="images/iconos/facebookIcon.png" alt=""></a>
-<a href=""></a>
-<a href=""></a>
-<a href=""></a>
-            <img src="images/iconos/twitterIcon.png" alt="">
-            <img src="images/iconos/InstagramIcon.png" alt="">
-            <img src="images/iconos/discrodIcon.png" alt="">
+            <a href=""><img src="images/iconos/twitterIcon.png" alt=""></a>
+            <a href=""><img src="images/iconos/InstagramIcon.png" alt=""></a>
+            <a href=""><img src="images/iconos/discrodIcon.png" alt=""></a>
         </article>
 
         <article id="contenido">
