--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -11,17 +11,17 @@
     </head>
 
     <body>
+        <!-- Titulo / header -->
         <header>
-            <h1 class="neonText">MANGAK</h1>
+            <h1 id="inicioPagina" class="neonText">MANGAK</h1>
             <p>"Just relax and read "</p>
         </header>
 
-
         <!-- Icono para ir hacia arriba -->
-        <a id="arriba" href="">
+        <a id="arriba" href="#inicioPagina">
             <img  src="images/iconos/flechaArriba.png" alt="">
         </a>
-
+        <!-- Barra de navegacion -->
         <nav>
             <ul>
                 <li><a href = "">Populares</a></li>
@@ -201,12 +201,10 @@
 
 
 
-
+        <!-- Main / portadas de mangas -->
         <main>
             <!-- 
                 id="PORTADAS"
-
-
 
                 id="kodomo"     -niños pequeños
                 id="shonen"     -chicos adolescentes
@@ -222,7 +220,6 @@
                         <img id="PORTADAS" src="images/" alt="">
                     </a>
                 </article>
-
              -->
             <article id="seinen">
                 <h4>One Piece</h4>
@@ -391,17 +388,16 @@
                     <img id="PORTADAS" src="images/portadas/isekai-tensei-soudouki.jpg" alt="">
                 </a>
             </article>
-
-            
+   
             <!-- [1][2][3]... -->
-
 
         </main>
 
-        <!-- <section></section> -->
+        <!-- actSectionNxt -->
 
     </body>
 
+    <!-- Footer pag sim -->
     <footer>
         <article id="website">
             <h4>Website</h4>
@@ -413,7 +409,7 @@
         </article>
 
         <article id="explorar">
-            <h4>Exproral</h4>
+            <h4>Exploral</h4>
             <ul>
                 <li><a href="#">Biblioteca</a></li>
                 <li><a href="#">Grupos</a></li>
@@ -436,7 +432,7 @@
                 MangaK no realiza las traducciones aquí realizadas y solo es un repositorio con visor propio para que se puedan leer de forma comoda las obras.
             </p>
         </article>
-
+        <!-- copyright -->
         <article id="copyright">© 2022 MangaK</article>
 
     </footer>
