--- a/Lenguaje_de_marcas/2cShop/index.html
+++ b/Lenguaje_de_marcas/2cShop/index.html
@@ -20,7 +20,7 @@
             <li><a href="">View Cart</a></li>
         </ul>
     </header>
-    <section>
+    <section id="topSection" >
         <h3>Tee Cental - Home of the Cheap Cheap Tees</h3>
         <p>Lorem ipsum dolor sit amet, consenteur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua, Ul enim ad minim veniam,
