--- a/Lenguaje_de_marcas/2cShop/index.html
+++ b/Lenguaje_de_marcas/2cShop/index.html
@@ -11,14 +11,16 @@
 <body>
     <header>
         <h1>2cShop</h1>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Support</a></li>
-            <li><a href="">View Cart</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">View Cart</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="topSection" >
