--- a/Lenguaje_de_marcas/Menú horizontal avanzado/index.html
+++ b/Lenguaje_de_marcas/Menú horizontal avanzado/index.html
@@ -8,14 +8,65 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+<!-- start nav -->
+<nav id="menu">
+    <!-- start menu -->
     <ul>
+        <li><a href="#">Enlace 1</a>
+            <!-- desplegable -->
+            <ul>
+                <li><a href="#">Enlace 1.1</a></li>
+                <li><a href="#">Enlace 1.2</a></li>
+                <li><a href="#">Enlace 1.3</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Enlace 2</a>
+            <!-- desplegable -->
+            <ul>
+                <li><a href="#">Enlace 2.1</a></li>
+                <li><a href="#">Enlace 2.2</a></li>
+                <li><a href="#">Enlace 2.3</a></li>
+            </ul>
+        </li>
+        
+        <li><a href="#">Enlace 3</a>
+            <!-- desplegable -->
+            <ul>
+                <li><a href="#">Enlace 3.1</a></li>
+                <li><a href="#">Enlace 3.2</a></li>
+                <li><a href="#">Enlace 3.3</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Enlace 4</a>
+            <!-- desplegable -->
+            <ul>
+                <li><a href="#">Enlace 4.1</a></li>
+                <li><a href="#">Enlace 4.2</a></li>
+                <li><a href="#">Enlace 4.3</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Enlace 5</a>
+            <!-- desplegable -->        
+            <ul>
+                <li><a href="#">Enlace 5.1</a></li>
+                <li><a href="#">Enlace 5.2</a></li>
+                <li><a href="#">Enlace 5.3</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
+
+
+
+
+    <!-- <ul>
         <li><a href="#" title="Enlace genérico"></a></li>
         <li><a href="#" title="Enlace genérico">Elem2</a></li>
         <li><a href="#" title="Enlace genérico">Elem3</a></li>
         <li><a href="#" title="Enlace genérico">Elem4</a></li>
         <li><a href="#" title="Enlace genérico">Elem5</a></li>
         <li><a href="#" title="Enlace genérico">Elem6</a></li>
-    </ul>
-    <p></p>
+    </ul> -->
 </body>
 </html>
