--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -24,16 +24,8 @@
         <!-- Barra de navegacion -->
         <nav>
             <ul>
-                <li><a href = "">Populares</a>
-                    <ul>
-                        <li><a href=""></a></li>
-                    </ul>
-                </li>
-                <li><a href = "">Géneros</a>
-                    <ul>
-                        <li><a href=""></a></li>
-                    </ul>
-                </li>
+                <li><a href = "">Populares</a></li>
+                <li><a href = "">Géneros</a></li>
                 <li><a href = "">Nuevos</a></li>
                 <li><a href = "">Noticias </a></li>
                 <li><a href = "">Mi Biblioteca </a></li>
