--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="styles/style.css"/>
         <link rel="icon" href="images/iconos/icon.ico" type="ico">
         <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     </head>
 
     <body>
@@ -15,8 +16,39 @@
         <header>
             <h1 id="inicioPagina" class="neonText">MANGAK</h1>
             <p>"Just relax and read "</p>
+            <!-- 3 RAYAS DEL LATERAL ACCOUNT -->
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+        
         </header>
 
+
+
+
+
+
+
+        <!-- LATERAL ACCOUNT DISPLAY -->
+        <nav id="cuentaLateral">
+            <input type="checkbox" id="check">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Portafolio</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+
+
+
+
+
+
+
+
+        
         <!-- Icono para ir hacia arriba -->
         <a id="arriba" href="#inicioPagina">
             <img  src="images/iconos/flechaArriba.png" alt="">
@@ -30,7 +62,6 @@
                 <li><a href = "">Noticias </a></li>
                 <li><a href = "">Mi Biblioteca </a></li>
             </ul>
-
         </nav>
 
         <aside>
