--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -16,11 +16,13 @@
         <header>
             <h1 id="inicioPagina" class="neonText">MANGAK</h1>
             <p>"Just relax and read "</p>
+
             <!-- 3 rayas del laterañ display -->
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars"></i>
             </label>
 
+            <!-- Desgradado debajo del label -->
             <div></div>
 
         
