Barra de busqueda

--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -43,10 +43,10 @@
                 <li><a href = "">Mi Biblioteca </a></li>
                 
                 <!-- Barra de busqueda -->
-                <div id="search">
+                <!-- <div id="search">
                     <input type="search" placeholder="Search...">
                     <img src="images/iconos/lupa.png" alt="">
-                </div>
+                </div> -->
             </ul>
 
             
