--- a/Lenguaje_de_marcas/searchEngine.html
+++ b/Lenguaje_de_marcas/searchEngine.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador( ͡° ͜ʖ ͡°)</title>
+    <title>Duck.🦆🐤🐤🐤🐤</title>
 </head>
-<body style="text-align: center; margin-top: 16%; background-color: cornsilk;">
+
+<style>
+
+    body{
+        text-align: center;
+        margin-top: 16%;
+        background-image: url('https://img.freepik.com/premium-vector/seamless-pattern-rubber-bathing-cartoon_71328-1355.jpg?w=2000');
+        background-size: 400px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+
+    form{
+        float: left;
+        margin-left: 45%;
+        width: 200px;
+        background-color: rgb(255, 239, 160);
+        border-radius: 10px;
+        padding: 20px 0 20px 0;
+
+    }
+
+</style>
+
+<body>
+    <audio src="" autoplay></audio>
     <form method="get" action="https://www.google.com/search" target="_blank">
         <input class="entrada" type="search" name="q" placeholder="Término a buscar" required=""><br>
-        <b>Tipos de archivos:</b><br> 
+        <b>Tipos de archivos:</b><br>
+        blink 
             <select class="select" name="as_filetype">
                <option label="Todos" value="" selected="selected"></option>
                <option value="ppt">PowerPoint</option>
@@ -26,6 +51,5 @@
         <input type="hidden" name="num" value="50"> 
         <input class="botb" type="submit" value="Buscar">    
         </form>
-        <input type="range" value="">
 </body>
 </html>
