--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -92,6 +92,7 @@
             <ul>
                 <h3>Top Semanal</h3>
 
+                <!-- Corona -->
                 <img id="corona" src="images/iconos/topcrownAmarillo.png" alt="">
 
 
@@ -174,6 +175,7 @@
             <ul>
                 <h3>Top Mensual</h3>
 
+                <!-- Corona -->
                 <img id="corona" src="images/iconos/topcrownAmarillo.png" alt="">
 
 
