--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -473,10 +473,10 @@
         
         <article id="siguenos">
             <h4>Siguenos</h4>
-            <a href=""><img src="images/iconos/facebookIcon.png" alt=""></a>
-            <a href=""><img src="images/iconos/twitterIcon.png" alt=""></a>
-            <a href=""><img src="images/iconos/InstagramIcon.png" alt=""></a>
-            <a href=""><img src="images/iconos/discrodIcon.png" alt=""></a>
+            <a href="#"><img src="images/iconos/facebookIcon.png" alt=""></a>
+            <a href="#"><img src="images/iconos/twitterIcon.png" alt=""></a>
+            <a href="#"><img src="images/iconos/InstagramIcon.png" alt=""></a>
+            <a href="#"><img src="images/iconos/discrodIcon.png" alt=""></a>
         </article>
 
         <article id="contenido">
